tests/paczka1/small_fuzzy/15680416.err
Error in line 1: fTFb S703 67,5
Error in line 13: qeeK S233 58,0
